# file-cleaner

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json  config.json
.github/workflows/: release.yml
src/: analyze.rs  apply.rs  config.rs  decompress.rs  lib.rs  main.rs  normalize.rs  report.rs  scan.rs  workflow.rs
src/extract/: css.rs  html.rs  js.rs  json.rs  mod.rs
tests/: integration_scan.rs
web/: .htaccess  README.md  about.php  api.php  check.php  config.json  config.local.php.example  config.php  configurator.php  index.php  quarantine.php  reports.php  run.php
web/includes/: bootstrap.php  functions.php
web/lang/: en.php  zh.php  zhs.php
web/templates/: layout.php
