[package]
name = "file-cleaner"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
blake3 = "1.8.5"
flate2 = "1.0"
camino = "1.2.4"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
glob = "0.3.3"
path-clean = "1.0.1"
percent-encoding = "2.3.2"
rayon = "1.12.0"
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
url = "2.5.8"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
